# BIFANG

./: BIFANGLexer.g4  BIFANGParser.g4  CMakeLists.txt
BIFANGLexer/: BIFANGLexer.cpp  BIFANGLexer.h  BIFANGLexer.interp
BIFANGParser/: BIFANGParser.cpp  BIFANGParser.h  BIFANGParser.interp  BIFANGParser.tokens  BIFANGParserBaseVisitor.cpp  BIFANGParserBaseVisitor.h  BIFANGParserListener.cpp  BIFANGParserListener.h  BIFANGParserVisitor.cpp  BIFANGParserVisitor.h
include/: BIFANGVisitor.h  BasicBlock.h  Builder.h  Function.h  GlobalUnit.h  IRInstruction.h  Instruction.h  LLVM.h  Scope.h  Type.h  Utils.h  ValueRef.h
include/Backend/: AsmBuilder.hpp  LinearScan.hpp  LiveAnalysis.hpp  MachineBlock.hpp  MachineCodePass.hpp  MachineFunction.hpp  MachineInstruction.hpp  MachineOperand.hpp  MachineUnit.hpp
include/Backend/utils/: NotImplemented.hpp  UtilFunctions.hpp
include/Pass/: DomNode.h  DomTreePass.h  IROptimizer.h  LiveVariableAnalysis.h  Mem2RegPass.h  OptUtils.h
runtime/antlr4-runtime/: Parser.cpp  ParserRuleContext.h
src/: BIFANGVisitor.cpp  BasicBlock.cpp  Builder.cpp  Function.cpp  GlobalUnit.cpp  IRInstruction.cpp  LLVM.cpp  Scope.cpp  Type.cpp  Utils.cpp  ValueRef.cpp  main.cpp  sylib.c  sylib_utils.cpp
src/Backend/: LinearScan.cpp  LiveAnalysis.cpp  MachineBlock.cpp  MachineInstruction.cpp  MachineOperand.cpp
src/Pass/: DomNode.cpp  DomTreePass.cpp  IROptimizer.cpp  LiveVariableAnalysis.cpp  Mem2RegPass.cpp  OptUtils.cpp
testcases/: testcase1.bf  testcase2.bf  testcase3.bf  testcase4.bf  testcase5.bf  testcase6.bf
(+3 files in other folders)
